|Atif,Sambhav|Fix List service principals response API
